packages/compiler/test/__snapshots__/compile.test.js.snap
// Vitest Snapshot v1

exports[`attribute > binding checkbox group 1`] = `
"import {ref, html, clone, traverse, effect, access, on, get_checked_values, append, define} from \\"@intrnl/velvet/internal\\";
let template0 = html(\\"<input type=\\\\\\"checkbox\\\\\\" value=\\\\\\"Apple\\\\\\" /> <input type=\\\\\\"checkbox\\\\\\" value=\\\\\\"Orange\\\\\\" />\\");
function setup($$root, $$host) {
  let selected = ref(['Apple']);
  let fragment0 = clone(template0);
  let child0 = traverse(fragment0, [0]);
  let child1 = traverse(fragment0, [2]);
  effect(() => child0.checked = selected(access).includes(child0.value));
  on(child0, \\"input\\", () => selected(get_checked_values(selected(access), child0.value, child0.checked)));
  effect(() => child1.checked = selected(access).includes(child1.value));
  on(child1, \\"input\\", () => selected(get_checked_values(selected(access), child1.value, child1.checked)));
  append($$root, fragment0);
}
export default define(null, setup, {});
"
`;

exports[`attribute > binding checkbox group nested 1`] = `
"import {ref, html, clone, traverse, effect, access, on, get_checked_values, append, define} from \\"@intrnl/velvet/internal\\";
let template0 = html(\\"<input type=\\\\\\"checkbox\\\\\\" value=\\\\\\"Apple\\\\\\" /> <input type=\\\\\\"checkbox\\\\\\" value=\\\\\\"Orange\\\\\\" />\\");
function setup($$root, $$host) {
  let state = ref({
    selected: ['Apple']
  });
  state({
    selected: ['Orange']
  });
  let fragment0 = clone(template0);
  let child0 = traverse(fragment0, [0]);
  let child1 = traverse(fragment0, [2]);
  effect(() => child0.checked = state(access).selected.includes(child0.value));
  on(child0, \\"input\\", () => state(access).selected = get_checked_values(state(access).selected, child0.value, child0.checked));
  effect(() => child1.checked = state(access).selected.includes(child1.value));
  on(child1, \\"input\\", () => state(access).selected = get_checked_values(state(access).selected, child1.value, child1.checked));
  append($$root, fragment0);
}
export default define(null, setup, {});
"
`;

exports[`conditional logic > consequent 1`] = `
"import {html, clone, traverse, after, show, append, define} from \\"@intrnl/velvet/internal\\";
let template0 = html(\\"<!>\\");
let template1 = html(\\"<div>foo</div><!>\\");
function setup($$root, $$host) {
  let fragment0 = clone(template0);
  let marker1 = traverse(fragment0, [0]);
  let block1 = $$root => {
    let fragment1 = clone(template1);
    let marker0 = traverse(fragment1, [1]);
    after($$root, fragment1);
    return marker0;
  };
  show(marker1, () => foo ? block1 : null);
  append($$root, fragment0);
}
export default define(null, setup, {});
"
`;

exports[`conditional logic > consequent and alternate 1`] = `
"import {html, clone, traverse, after, show, append, define} from \\"@intrnl/velvet/internal\\";
let template0 = html(\\"<!>\\");
let template1 = html(\\"<div>foo</div><!>\\");
let template2 = html(\\"<div>bar</div><!>\\");
function setup($$root, $$host) {
  let fragment0 = clone(template0);
  let marker2 = traverse(fragment0, [0]);
  let block1 = $$root => {
    let fragment1 = clone(template1);
    let marker0 = traverse(fragment1, [1]);
    after($$root, fragment1);
    return marker0;
  };
  let block2 = $$root => {
    let fragment2 = clone(template2);
    let marker1 = traverse(fragment2, [1]);
    after($$root, fragment2);
    return marker1;
  };
  show(marker2, () => foo ? block1 : block2);
  append($$root, fragment0);
}
export default define(null, setup, {});
"
`;

exports[`element > throws on improper closing tag 1`] = `
"</button> attempted to close an element that was not open (1:13)
1: <legend>Title</button>
                ^"
`;

exports[`module context > allow top level await 1`] = `
"import {html, clone, traverse, text, append, define} from \\"@intrnl/velvet/internal\\";
let template0 = html(\\"<div>the number is <!></div>\\");
let number = await Promise.resolve(420);
function setup($$root, $$host) {
  let fragment0 = clone(template0);
  let marker0 = traverse(fragment0, [0, 1]);
  text(marker0, () => number);
  append($$root, fragment0);
}
export default define(null, setup, {});
"
`;

exports[`props > throws on two variable exported to one name 1`] = `
"Acorn error: Duplicate export 'baz' (6:31)
4:       let bar = 2;
5: 
6:       export { foo as baz, bar as baz };
                                     ^
7:       </script>
8:     "
`;

exports[`script context > throws on await 1`] = `
"Acorn error: Cannot use keyword 'await' outside an async function (3:17)
1: 
2:       <script>
3:         let number = await Promise.resolve(123);
                        ^
4:       </script>
5: "
`;

exports[`store > throws on lone $ 1`] = `
"no singular $ reference (3:15)
1: 
2:       <script>
3:       console.log($);
                     ^
4:       </script>
5:     "
`;
